--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "\"echo \"Error: no test especified\" && exit 1",
-    "build:ui": "rm -rf build && cd C:/Users/johan/Documents/fullstack/part2/part2 && npm run build && cp -r build C:/Users/johan/Documents/fullstack/part3",
+    "build:ui": "rm -rf build && cd ./build && npm run build && cp -r build ./build",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Johann Osnaya",
