--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "routes": [{ "src": "/[^.]+", "dest": "/api/notes", "status": 200 }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
   }
