--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "rewrites": [
       {"source": "/api/(.*)", "destination": "index.js"}
-    ]
+    ],
+    "builds": [
+        { "src": "*.html", "use": "@vercel/static" },
+        { "src": "*.py", "use": "@vercel/python" },
+        { "src": "*.js", "use": "@vercel/node" }
+      ]
   }
   
