--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
       {"source": "/api/(.*)", "destination": "index.js"}
     ],
     "builds": [
-        { "src": "*.html", "use": "@vercel/static" },
+        { "src": "index.html", "use": "@vercel/static" },
         { "src": "*.py", "use": "@vercel/python" },
         { "src": "*.js", "use": "@vercel/node" }
       ]
