--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      {"source": "/(.*)", "destination": "index.js"}
+      {"source": "/(.*)", "destination": "index.html"}
     ],
     "builds": [
         { "src": "*.html", "use": "@vercel/static" },
