--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "rewrites": [
-      {"source": "/(.*)", "destination": "/index.html"}
+      {"source": "/(.*)", "destination": "/"}
     ],
     "builds": [
-        { "src": "*.html", "use": "@vercel/static" },
+        { "src": "/index.html", "use": "@vercel/static" },
         { "src": "*.py", "use": "@vercel/python" },
         { "src": "*.js", "use": "@vercel/node" }
       ]
