--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
     "rewrites": [
-      {"source": "/", "destination": "/index.html"}
+      {"source": "/", "destination": "/"}
     ],
     "builds": [
+        { "src": "*.html", "use": "@vercel/static" },
         { "src": "*.js", "use": "@vercel/node" }
       ]
   }
