--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
       {"source": "/", "destination": "/"}
     ],
     "builds": [
-        { "src": "/build/index.html", "use": "@vercel/static" },
+        { "src": "/index.html", "use": "@vercel/static" },
         { "src": "*.js", "use": "@vercel/node" }
       ]
   }
