--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
-      {"source": "/(.*)", "destination": "/"}
-    ]
+      {"source": "/", "destination": "*.html"}
+    ],
+    "builds": [
+        { "src": "*.html", "use": "@vercel/static" },
+        { "src": "*.js", "use": "@vercel/node" }
+      ]
   }
   
