--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
-{
-    "rewrites": [
-      {"source": "/index.html", "destination": "/index.js"}
-    ]
-  }
+{ 
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/notes" }] 
+}
   
