--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 { 
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/notes" }] 
+  "rewrites": [{ "source": "/api/notes", "destination": "/api/notes" }] 
 }
   
