--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,9 @@
   ],
   "routes": [
   {
-  "src": "/api/notes",
+  "src": "/index.html",
   "dest": "/index.js"
-  }, 
-  {
-    "src": "/",
-    "dest": "/index.html"
-    }
+  }
   ]
   }
   
