--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,6 @@
   "dest": "/index.js"
   }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }]
   }
   
