--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/public/index.hmtl",
+      "source": "/index.hmtl",
       "destination": "/index.js"
     }
   ]
