Fix index.html path

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/public/index.html",
+      "source": "/(.*)",
       "destination": "/index.js"
     }
   ]
