--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
   "use": "@vercel/node"
   }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }]
+  "rewrites": [{ "source": "/", "destination": "/index.js" }]
   }
   
