Fix index.html path

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }],
+  "crons": [
+    {
+      "path": "/api/cron.js",
+      "schedule": "* * * * *"
+    }
+  ]
   }
   
