--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }],
   "crons": [
     {
       "path": "/api/cron.js",
       "schedule": "* * * * *"
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }]
   }
   
